обнова стилей подвал админка но без почты

--- a/views/sections/services.pug
+++ b/views/sections/services.pug
@@ -32,4 +32,5 @@ section#services
       h3 Транспортные услуги
       ul
         li Перевозка малогабаритных грузов
-        li Калькуляция
+      img(id="bus" src="images/bus.png", alt="", srcset="")
+      include ../components/calculaion
