--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,11 +10,21 @@ html
     link(href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet")
     link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css")
     link(rel="stylesheet" href="/css/contact.css")
+    link(rel="stylesheet" href="/css/calculation.css")
+    link(rel="stylesheet" href="/css/admin.css")
+    link(rel="stylesheet" href="/css/popup.css")
+    link(rel="stylesheet" href="/css/services.css")
+    link(rel="stylesheet" href="/css/footer.css")
   body
     header
       include components/navbar
     main
       block content
+    footer 
+      include components/footer
     include components/contact.pug
     script(src="/js/slider.js")
     script(src="/js/contact.js")
+    script(src="/js/calculation.js")
+    script(src="/js/admin.js")
+    script(src="/js/popup.js")
