--- a/views/components/footer.pug
+++ b/views/components/footer.pug
@@ -6,4 +6,4 @@ footer
       a(href="#portfolio") ПОРТФОЛИО
     .footer-info
       p Телефон: +7 (900) 123-45-67
-      p &copy; 2024 ИП Александрв
+      p(href="/admin") &copy; 2024 ИП Александров
