--- a/views/components/footer.pug
+++ b/views/components/footer.pug
@@ -1,9 +1,9 @@
 footer
   .footer-container
     .footer-links
-      a(href="#about-us") О НАС
-      a(href="#services") УСЛУГИ
-      a(href="#portfolio") ПОРТФОЛИО
+      a(href="/about") О НАС
+      a(href="/services") УСЛУГИ
+      a(href="/portfolio") ПОРТФОЛИО
     .footer-info
       p Телефон: +7 (900) 123-45-67
       p(href="/admin") &copy; 2024 ИП Александров
