--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -1,5 +1,7 @@
 // components/nav.pug
 nav.navbar
+  
+  img(src="images/kln-logo.jpg", alt="", srcset="")
   .navbar-container
     a.nav-item(href="/about") О НАС
     a.nav-item(href="/services") УСЛУГИ
