--- a/views/sections/services.pug
+++ b/views/sections/services.pug
@@ -11,7 +11,7 @@ section#services
       ul
         li Вызов мастера - +79217112494
         li Вызов специалиста
-      a(href="#portfolio") Портфолио (наши работы)
+      a(href="/portfolio") Портфолио (наши работы)
     li
       h3 Монтажные работы систем вентиляции и кондиционирования
       p Профессиональные услуги в области проектирования и монтажа
@@ -19,7 +19,7 @@ section#services
         li Инженерное проектирование систем вентиляции и кондиционирования
         li Вызов мастера на обслуживание систем вентиляции и кондиционирования
         li Полный спектр услуг на монтажные работы
-      a(href="#portfolio") Портфолио (наши работы)
+      a(href="/portfolio") Портфолио (наши работы)
     li
       h3 Монтажные работы систем отопления
       ul
