--- a/views/components/footer.pug
+++ b/views/components/footer.pug
@@ -5,5 +5,6 @@ footer
       a(href="/services") УСЛУГИ
       a(href="/portfolio") ПОРТФОЛИО
     .footer-info
-      p Телефон: +7 (900) 123-45-67
+      p.clickable Телефон: +7 (900) 123-45-67
+      p ул. Ленинская, д. 15, г. Калининград, 236029, Россия
       p(href="/admin") &copy; 2024 ИП Александров
