--- a/views/sections/services.pug
+++ b/views/sections/services.pug
@@ -3,34 +3,39 @@ section#services
   //- .slider
   //-     each photo in photos
   //-       .slide(style=`background-image: url(${photo})`)
-  h2 Услуги
-  ul
-    li
-      h3 Отделочные работы
-      p Полный спектр услуг по строительным и отделочным работам
-      ul
-        li Вызов мастера - +79217112494
-        li Вызов специалиста
-      a(href="/portfolio") Портфолио (наши работы)
-    li
-      h3 Монтажные работы систем вентиляции и кондиционирования
-      p Профессиональные услуги в области проектирования и монтажа
-      ul
-        li Инженерное проектирование систем вентиляции и кондиционирования
-        li Вызов мастера на обслуживание систем вентиляции и кондиционирования
-        li Полный спектр услуг на монтажные работы
-      a(href="/portfolio") Портфолио (наши работы)
-    li
-      h3 Монтажные работы систем отопления
-      ul
-        li Проектирование объекта
-        li Монтаж сантехники
-        li Прокладка металлических и пластиковых труб
-        li Вызов специалистов по осмечиванию
-        li Вызов мастера
+h2 Услуги
+ul
+  li
+    h3 Отделочные работы
+    p Полный спектр услуг по строительным и отделочным работам
+    ul
+      li Вызов мастера - +79217112494
+      li Вызов специалиста
+    a(href="/portfolio") Портфолио (наши работы)
+    button#order-finish-works.order-btn(data-service="Отделочные работы") Заказать
+  li
+    h3 Монтажные работы систем вентиляции и кондиционирования
+    p Профессиональные услуги в области проектирования и монтажа
+    ul
+      li Инженерное проектирование систем вентиляции и кондиционирования
+      li Вызов мастера на обслуживание систем вентиляции и кондиционирования
+      li Полный спектр услуг на монтажные работы
+    a(href="/portfolio") Портфолио (наши работы)
+    button#order-ventilation.order-btn(data-service="Монтажные работы систем вентиляции и кондиционирования") Заказать
+  li
+    h3 Монтажные работы систем отопления
+    ul
+      li Проектирование объекта
+      li Монтаж сантехники
+      li Прокладка металлических и пластиковых труб
+      li Вызов специалистов по осмечиванию
+      li Вызов мастера
+    button#order-heating.order-btn(data-service="Монтажные работы систем отопления") Заказать
+
     li
       h3 Транспортные услуги
       ul
         li Перевозка малогабаритных грузов
       img(id="bus" src="images/bus.png", alt="", srcset="")
       include ../components/calculaion
+      include ../components/popup-form
